# cinematic-video-engine

./: .gitattributes  .gitignore  LICENSE  PR_DESCRIPTION.md  README.md  app.py  auto_editor.py  color_engine.py  config.yaml  emotion_engine.py  fix_audio_duration_v192.ps1  frame_engine.py  hf_release_sync.ps1  main.py  motion_blur_engine.py  music_engine.py  prepare_pr.ps1  pyproject.toml  render_from_frames.py  requirements.txt  scene_engine.py  setup.py  smart_engine.py  test_render.py  validate_release.ps1  video_renderer.py  video_renderer_backup.py  web_app.py
.github/workflows/: render-test.yml  render.yml
.refact/buddy/: memory_ops.jsonl  runtime_queue.jsonl  state.json
.refact/buddy/chats/workflows/: buddy_architecture_drift_watcher.json  buddy_daily_digest.json  buddy_dependency_radar.json  buddy_docs_gardener.json  buddy_friday_retro.json  (+5 more)
.refact/tasks/: index.json
backups/v9_working/: auto_editor.py  emotion_engine.py  frame_engine.py  main.py  motion_engine.py  story_arc_engine.py  test_frame_generator.py  trailer_engine.py  transition_engine.py  video_renderer.py
cinematic_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
docs/: architecture.md  production_structure.md  roadmap.md
engine/: __init__.py  audio_engine.py  auto_editor.py  cli.py  cli_runner.py  config.py  easing.py  final_renderer.py  frame_generator.py  logger.py  renderer.py  transition_engine.py
engine/core/: audio_utils.py  frame_engine.py  frame_model.py  motion_engine.py  motion_types.py  segment_engine.py  storage_manager.py  video_renderer.py
